--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,6 +19,7 @@
             <ul class="list-group">
                 <li class="list-group-item"><a href="employees">Employees list</a></li>
                 <li class="list-group-item"><a href="">SB2 - Feature X</a></li>
+                <li class="list-group-item"><a href="http://localhost:8080/actuator/example">Actuator Example</a></li>
             </ul>
         </div>
         <a href="logout">LOGOUT</a>
